Your first commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage": "https://github.com/kartikdutta28/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
