--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://github.com/kartikdutta28/portfolio",
+  "homepage": "https://kartikdutta28.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
